[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Enforce consistent dependency versions across the workspace.
[workspace.dependencies]
borsh = "0.10.4"
solana-program = "1.16.12"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

# Use a patch to force solana-program and solana-sdk from Git so that all dependencies resolve to 1.16.x.
[patch.crates-io]
solana-program = { git = "https://github.com/solana-labs/solana", tag = "v1.16.12" }
solana-sdk     = { git = "https://github.com/solana-labs/solana", tag = "v1.16.12" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1