[workspace]
members = [
    "programs/cabal-protocol"
]
resolver = "2"

# Enforce consistent dependency versions across the workspace.
[workspace.dependencies]
anchor-lang = { version = "=0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.28.0", features = ["token"], default-features = false }
solana-program = "=1.16.18"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1