[package]
name = "cabal-protocol"
version = "0.1.0"
description = "Cabal group trading protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cabal_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.16.12"
borsh = "0.10.3" 
jupiter-cpi = { git = "https://github.com/jup-ag/jupiter-cpi.git", branch = "main" }
