[package]
name = "cabal-protocol"
version = "0.1.0"
description = "Cabal group trading protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cabal_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.28.0", features = ["token"], default-features = false }
solana-program = "=1.16.18"
jupiter-cpi = { git = "https://github.com/jup-ag/jupiter-cpi", tag = "v4.0.0", features = ["cpi"] }
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
borsh = "=1.5.5"